--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <form id="logForm">
       <label for="logFile"><i class="fa-solid fa-file-lines"></i> Envie o arquivo de log (.txt):</label>
       <input type="file" id="logFile" accept=".txt" required />
+      <label for="logFile"><i class="fa-solid fa-key"></i> Coloque a chave da api: </label>
+      <input type="text" id="apiKey" required />
+
       <button type="submit"><i class="fa-solid fa-upload"></i> Analisar Log</button>
     </form>
 
