--- a/index.html
+++ b/index.html
@@ -21,8 +21,13 @@
     </form>
 
     <section>
-      <h2><i class="fa-solid fa-copy"></i> Conteúdo do Log</h2>
-      <pre id="logContent">(nenhum arquivo carregado)</pre>
+      <h2>
+        <i class="fa-solid fa-copy"></i> Conteúdo do Log
+        <button type="button" id="toggleLogBtn" class="toggle-btn" style="display: none;">
+          <i class="fa-solid fa-chevron-down"></i>
+        </button>
+      </h2>
+      <pre id="logContent" class="collapsed">(nenhum arquivo carregado)</pre>
     </section>
 
     <section>
