interpretação de markdown

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>FlyIA</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="style.css" />
+  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </head>
 <body>
   <div class="container">
@@ -32,7 +33,7 @@
 
     <section>
       <h2><i class="fa-solid fa-square-poll-vertical"></i> Diagnóstico da IA</h2>
-      <pre id="diagnostico">(diagnóstico aparecerá aqui)</pre>
+      <div id="diagnostico" class="markdown-content">(diagnóstico aparecerá aqui)</div>
     </section>
   </div>
 
