toggle do sidebar

--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </head>
 <body>
+  <button id="sidebarToggle" class="sidebar-toggle-btn">
+    <i class="fa-solid fa-bars"></i>
+  </button>
+
   <div class="app-container">
-    <aside class="sidebar">
+    <aside class="sidebar" id="sidebar">
       <div class="sidebar-header">
         <h2><i class="fa-solid fa-helicopter"></i> FlyIA</h2>
         <p>Assistente Especializado em Drones</p>
